test/compile-fail/resolution/use/nested-private-struct/expected.txt
error: item `c` is private
  ┌─ ./test/compile-fail/resolution/use/nested-private-struct/top.rhdl:3:16
  │
3 │         struct c {}
  │                - declared here
  ·
7 │ use a::b::c;
  │           ^ item is private
  │
  = modify the visibility of `c` if you want to use it

